# nuclear-api

./: .env.example  CLAUDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TECHNICAL_NOTES.md  config.py  examples.sh  main.py  pyproject.toml  render.yaml  start.sh  test_api.py  validate_setup.py
data/: __init__.py  constants.py
models/: __init__.py  decay.py  pet.py  shielding.py
physics/: __init__.py  monte_carlo.py
