[project]
name = "nuclear-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "numpy>=2.4.3",
    "pydantic-settings>=2.0.0",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
nuclear-api = "main:run_server"
